success_page.html add _blank to open on new windows wsp link

--- a/templates/success_page.html
+++ b/templates/success_page.html
@@ -16,7 +16,7 @@
       <form action={{wsp_link}}>
           <img src="{{ url_for('static', filename='img/Finish.gif') }}" alt="Dame esos 5" class="img_thanks">
           <h3 align="center">{{success_msg}}<h3>
-          <a href={{wsp_link}} class="btn btn-success" align="center">Enviar msg a wspeee!</a>
+          <a href={{wsp_link}} class="btn btn-success" align="center" target="_blank">Enviar msg a wspeee!</a>
       </form>
     </div>
   </div>
